--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script type="module" defer src="./main.js"></script>
 </head>
 <body>
+    <div class="parent">
+        <!-- 주석 -->
+        <div class="child">1</div>
+        텍스트1
+        <div class="child">2</div>
+        텍스트2
+    </div>
     <div class="container">
         <h1>Loading...</h1>
     </div>
