--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <script type="module" defer src="./main.js"></script>
 </head>
 <body>
+    <div class="parent2">
+        <!-- 주석 -->
+        <div class="child">3</div>
+        텍스트1
+        <div id="child2" class="child">4</div>
+        텍스트2
+        <div class="child">5</div>
+    </div>
     <div class="parent">
         <!-- 주석 -->
         <div class="child">1</div>
