--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script type="module" defer src="./main.js"></script>
 </head>
 <body>
+    <div class="parent3">
+        <div class="child">1</div>
+        <div class="child">2</div>
+    </div>
     <div class="parent2">
         <!-- 주석 -->
         <div class="child">3</div>
@@ -18,13 +22,17 @@
     </div>
     <div class="parent">
         <!-- 주석 -->
-        <div class="child">1</div>
+        <div class="child">6</div>
         텍스트1
-        <div class="child">2</div>
+        <div class="child">7</div>
         텍스트2
     </div>
     <div class="container">
         <h1>Loading...</h1>
     </div>
+
+
+</div>
+
 </body>
 </html>
