--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script type="module" defer src="./main.js"></script>
+    <style>
+        .child {
+            width: 100px;
+            font-size: 60px;
+        }
+    </style>
 </head>
 <body>
     <div class="parent3">
