--- a/vanilla-js/test.html
+++ b/vanilla-js/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script defer src="./object_literal.js"></script>
+    <script defer src="./5_11_xml_http_request.js"></script>
   </head>
   <body></body>
 </html>
