--- a/vanilla-js/test.html
+++ b/vanilla-js/test.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="module" defer src="./5_15_class.js"></script>
+    <script type="module" defer src="./8_1_dom.js"></script>
   </head>
-  <body></body>
+  <body>
+    <input type="text" value="ABC" id="text1" />
+    <select name="" id="sel"></select>
+  </body>
 </html>
